--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <!-- CSS only -->
   <link rel="stylesheet" href="https://unpkg.com/primeflex@^3/primeflex.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
 </head>
 
 <body>
