--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <!-- CSS only -->
   <link rel="stylesheet" href="https://unpkg.com/primeflex@^3/primeflex.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
-</head>
+<!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />-->
+  <script src="https://kit.fontawesome.com/aa33f1348a.js" crossorigin="anonymous"></script>
+  </head>
 
 <body>
   <app-root></app-root>
